[gd_scene load_steps=2 format=3 uid="uid://gew0xxy3q4qu"]

[ext_resource type="Script" path="res://powerup_card.gd" id="1"]

[node name="PowerupCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 280)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RarityLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Common"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Golden Dice"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "All payouts increased by 25%"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT"
